source_set("test") {
  a = "a"
  b = "b"
  c = {
    d = "d"
    e = "e"
  }
  f = [
    "f0",
    "f1",
    "f2",
  ]
  deps = [
    "//a",
    "//a/a",
    "//a/b",
    "//a:a",
    "//a:b",
    "//b",
    c.e,
    c.d,
    ":a",
    ":b",
    f[2],
    f[0],
    "a",
    "a/a",
    "a/b",
    "a:a",
    "a:b",
    "b",
    a,
    b,
    c.d,
    f[0],
    f[1],
  ]

  public_deps = []
  if (condition) {
    public_deps += [
      "//a",
      "//a/a",
      "//a:a",
      ":a",
      "a",
      "a/a",
      "a:a",
      a,
    ]

    deps += [
      ":d",
      ":e",
      # Some comment attached to an item. Should be moved with the item
      # when it is sorted.
      ":a",
      ":b",
      # Comment attached to a duplicated item. Should be concatenated to
      # the comment from the other item.
      ":a",
    ]
  }

  # Sort lists with "deps" suffix as "deps".
  foo_deps = [
    "//a",
    ":z",
  ]

  # Likewise for visibility
  visibility = [
    "//b:*",
    "//a",
    "//b/*",
    ":z",
  ]
}
