# This is a very long line that should normally reflow but we want to make sure it does not merge with the list item below it.
# 1. This is a list item.
# 10. This is a multi-digit list item.
# 100 This is a multi-digit list item without a dot.
# - This is a bullet list.
# * This is another bullet list.
# This is another very long line that should also reflow but should not merge with the list item above it.
